--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="bg-zinc-900">
     <div class="p-8">
-        <h1 class="text-2xl text-white mb-4">VanillaJS Wallet Connection</h1>
+        <h1 class="text-2xl text-white mb-4">ESG NFT PROJECT by PROF.LEE(The world we live in together)</h1>
 
         <p class="text-zinc-400 mb-4">Basic JavaScript demonstration to interact with a MetaMask wallet and a contract.
         </p>
