--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESG NFT PROJECT by PROF.LEE(The world we live in together)</title>
+    <title>ESG NFT PROJECT by PROF.LEE(The World We Live in Together)</title>
 
     <!-- TAILWIND STYLING -->
     <script src="https://cdn.tailwindcss.com"></script>
