--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VanillaJS Wallet Connection</title>
+    <title>ESG NFT PROJECT by PROF.LEE(The world we live in together)</title>
 
     <!-- TAILWIND STYLING -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -20,7 +20,7 @@
 
 <body class="bg-zinc-900">
     <div class="p-8">
-        <h1 class="text-2xl text-white mb-4">VanillaJS Wallet Connection</h1>
+        <h1 class="text-2xl text-white mb-4">ESG NFT PROJECT by PROF.LEE(The world we live in together)</h1>
 
         <p class="text-zinc-400 mb-4">Basic JavaScript demonstration to interact with a MetaMask wallet and a contract.
         </p>
@@ -89,70 +89,7 @@
             <p class="text-zinc-400 mb-4">These are all the interactions with a contract deployed to the <a
                     class="text-blue-500 underline italic chain-link" href="#" target="_blank"></a>.</p>
 
-            <div class="mb-8">
-                <label class="block mb-2 text-zinc-600">ABI</label>
-                <code class="block bg-zinc-500 p-6 rounded bg-zinc-800 text-zinc-200 overflow-scroll max-h-[300px]">
-                    <pre id="pre-wallet-network">
-[
-    {
-        "inputs": [
-            {
-                "internalType": "string",
-                "name": "_greeting",
-                "type": "string"
-            }
-        ],
-        "stateMutability": "nonpayable",
-        "type": "constructor"
-    },
-    {
-        "anonymous": false,
-        "inputs": [
-            {
-                "indexed": false,
-                "internalType": "address",
-                "name": "sender",
-                "type": "address"
-            },
-            {
-                "indexed": false,
-                "internalType": "string",
-                "name": "message",
-                "type": "string"
-            }
-        ],
-        "name": "NewGreeting",
-        "type": "event"
-    },
-    {
-        "inputs": [],
-        "name": "getGreeting",
-        "outputs": [
-            {
-                "internalType": "string",
-                "name": "",
-                "type": "string"
-            }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-    },
-    {
-        "inputs": [
-            {
-                "internalType": "string",
-                "name": "_greeting",
-                "type": "string"
-            }
-        ],
-        "name": "setGreeting",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-    }
-]                   </pre>
-                </code>
-            </div>
+            
 
             <h2 id="contract-read" class="text-xl text-zinc-100 mb-4">Contract Read</h2>
 
